Minor Module Reorganization
This will never be done just as I want it, but the more obvious file shuffling is done.

Design docs will come up eventually

--- a/Source/Tracer/CMakeLists.txt
+++ b/Source/Tracer/CMakeLists.txt
@@ -4,11 +4,18 @@
 
 target_sources(${PROJECT_NAME}
     PRIVATE
-        Ray.cpp
-        Ray.h
-        RayEngine.cpp
-        RayEngine.h
-        RayJob.cpp
-        RayJob.h
+        Camera/Camera.cpp
+        Camera/Camera.h
+        Camera/Film/Film.cpp
+        Camera/Film/Film.h
+        Camera/Film/Filter/Filter.cpp
+        Camera/Film/Filter/Filter.h
+        Camera/Lens/Lens.h
+        Ray/Ray.cpp
+        Ray/Ray.h
+        Ray/RayEngine.cpp
+        Ray/RayEngine.h
+        Ray/RayJob.cpp
+        Ray/RayJob.h
 )
 
