Moved GUI Module to Soul + Moved Input File Location

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ add_subdirectory(Source/Audio)
 add_subdirectory(Source/Compute)
 add_subdirectory(Source/Core)
 add_subdirectory(Source/Display/Window)
+add_subdirectory(Source/Display/Input)
 add_subdirectory(Source/Display/GUI)
 add_subdirectory(Source/Memory)
 add_subdirectory(Source/Network)
@@ -137,7 +138,7 @@ add_subdirectory(Source/Parallelism)
 add_subdirectory(Source/Physics)
 add_subdirectory(Source/Rasterer)
 add_subdirectory(Source/Tracer)
-add_subdirectory(Source/Transput)
+add_subdirectory(Source/Transput/Resource)
 
 #Provides Visual Studio filter support
 get_target_property(PROJECT_SOURCES ${PROJECT_NAME} SOURCES)
