Imgui Update Function
IO is now passed to imgui and a hardcoded window is grabbed from the windowModule for size purposes.

--- a/Source/Display/Window/CMakeLists.txt
+++ b/Source/Display/Window/CMakeLists.txt
@@ -12,6 +12,8 @@ target_sources(${PROJECT_NAME}
         Modules/GLFW/GLFWWindow.h
         Modules/Mock/MockWindowBackend.cpp
         Modules/Mock/MockWindowBackend.h
+        Modules/Mock/MockWindow.cpp
+        Modules/Mock/MockWindow.h
         Window.cpp
         Window.h
 )
