--- a/Source/Render/RenderGraph/CMakeLists.txt
+++ b/Source/Render/RenderGraph/CMakeLists.txt
@@ -8,4 +8,6 @@ target_sources(${PROJECT_NAME}
         Modules/Vulkan/VulkanRenderGraphBackend.h
         RenderGraphModule.cpp
         RenderGraphModule.h
+        CommandList.cpp
+        CommandList.h
 )
