Minor RenderGraph Interface Refactor

--- a/Source/Render/RenderGraph/CMakeLists.txt
+++ b/Source/Render/RenderGraph/CMakeLists.txt
@@ -6,6 +6,8 @@ target_sources(${PROJECT_NAME}
     PRIVATE
         Modules/Entity/EntityRenderGraphBackend.cpp
         Modules/Entity/EntityRenderGraphBackend.h
+        RenderTaskParameters.cpp
+        RenderTaskParameters.h
         RenderGraphModule.cpp
         RenderGraphModule.h
 )
