--- a/Source/Parallelism/CMakeLists.txt
+++ b/Source/Parallelism/CMakeLists.txt
@@ -4,12 +4,14 @@
 
 target_sources(${PROJECT_NAME}
     PRIVATE
-        Graph/Graph.cpp
+        Graph/Modules/EntityGraph/Graph.cpp
+        Graph/Modules/EntityGraph/Graph.h
+        Graph/Modules/EntityGraph/GraphNode.cpp
+        Graph/Modules/EntityGraph/GraphNode.h
+        Graph/Modules/EntityGraph/GraphTask.cpp
+        Graph/Modules/EntityGraph/GraphTask.h
+        Graph/GraphTask.h
         Graph/Graph.h
-        Graph/Node.cpp
-        Graph/Node.h
-        Graph/Task.cpp
-        Graph/Task.h
         Scheduler/Modules/Dispatch/DispatchSchedulerBackend.cpp
         Scheduler/Modules/Dispatch/DispatchSchedulerBackend.h
         Scheduler/Modules/Fiber/FiberProperties.cpp
