--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,10 +87,10 @@ set_target_properties(${PROJECT_NAME}
 
 target_compile_definitions(${PROJECT_NAME} 
     PRIVATE
-        CUDA_COMPUTE=${BUILD_CUDA_COMPUTE}
-        OPENCL_COMPUTE=${BUILD_OPENCL_COMPUTE}
-        FIBER_SCHEDULER=${BUILD_FIBER_SCHEDULER}
-        ENTITY_GRAPH=${BUILD_ENTITY_GRAPH}
+        CUDA_COMPUTE=BUILD_CUDA_COMPUTE
+        OPENCL_COMPUTE=BUILD_OPENCL_COMPUTE
+        FIBER_SCHEDULER=BUILD_FIBER_SCHEDULER
+        ENTITY_GRAPH=BUILD_ENTITY_GRAPH
 )
 
 target_include_directories(${PROJECT_NAME}
