--- a/Source/Render/RenderGraph/CMakeLists.txt
+++ b/Source/Render/RenderGraph/CMakeLists.txt
@@ -8,6 +8,8 @@ target_sources(${PROJECT_NAME}
         Modules/Entity/EntityRenderGraphBackend.h
         RenderTaskParameters.cpp
         RenderTaskParameters.h
+        RenderGraphBuilder.cpp
+        RenderGraphBuilder.h
         RenderGraphModule.cpp
         RenderGraphModule.h
 )
