--- a/Source/Render/RenderGraph/CMakeLists.txt
+++ b/Source/Render/RenderGraph/CMakeLists.txt
@@ -6,8 +6,8 @@ target_sources(${PROJECT_NAME}
     PRIVATE
         Modules/Entity/EntityRenderGraphBackend.cpp
         Modules/Entity/EntityRenderGraphBackend.h
-        RenderTaskParameters.cpp
-        RenderTaskParameters.h
+        RenderGraphParameters.cpp
+        RenderGraphParameters.h
         RenderGraphBuilder.cpp
         RenderGraphBuilder.h
         RenderGraphModule.cpp
