--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -46,12 +46,15 @@ target_sources(${PROJECT_NAME}
         Structure/Acceleration/LBVHManager.h
         Structure/Acceleration/Node.cpp
         Structure/Acceleration/Node.h
+        Structure/External/ExternalArray.h
+        Structure/External/ExternalVector.h
         Structure/Sparse/SparseArray.h
         Structure/Sparse/SparseBitMap.h
         Structure/Sparse/SparseHashMap.h
         Structure/Sparse/SparseHashSet.h
         Structure/Sparse/SparseTable.h
         Structure/Sparse/SparseVector.h
+        Structure/ExternalStructure.h
         Structure/RingBuffer.h
         Structure/Structure.h
         Structure/SparseStructure.h
