Added View and Structure Concept Preliminaries

--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -57,7 +57,9 @@ target_sources(${PROJECT_NAME}
         Structure/ExternalStructure.h
         Structure/RingBuffer.h
         Structure/Structure.h
+        Structure/StructureConcepts.h
         Structure/SparseStructure.h
+        Structure/View.h
         System/Compiler.h
         System/Platform.h
         Utility/Exception/Exception.h
