--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ target_link_libraries(${PROJECT_NAME}
         CONAN_PKG::stb
         CONAN_PKG::imgui
         Vulkan::Vulkan
+	stdc++fs
 )
 
 
