--- a/Source/Transput/Resource/CMakeLists.txt
+++ b/Source/Transput/Resource/CMakeLists.txt
@@ -6,6 +6,8 @@ target_sources(${PROJECT_NAME}
     PRIVATE
         Modules/SPIRV/SPIRVLoader.cpp
         Modules/SPIRV/SPIRVLoader.h
+        Asset.cpp
+        Asset.h
         Resource.cpp
         Resource.h
         ResourceLoader.h
