--- a/Source/Render/Raster/CMakeLists.txt
+++ b/Source/Render/Raster/CMakeLists.txt
@@ -29,8 +29,12 @@ target_sources(${PROJECT_NAME}
         Modules/Vulkan/VulkanRasterBackend.h
         Modules/Vulkan/VulkanRenderPass.cpp
         Modules/Vulkan/VulkanRenderPass.h
+        Modules/Vulkan/VulkanRenderTask.cpp
+        Modules/Vulkan/VulkanRenderTask.h
         Modules/Vulkan/VulkanShader.cpp
         Modules/Vulkan/VulkanShader.h
+        Modules/Vulkan/VulkanSurface.cpp
+        Modules/Vulkan/VulkanSurface.h
         Modules/Vulkan/VulkanSwapChain.cpp
         Modules/Vulkan/VulkanSwapChain.h
         CommandList.cpp
