--- a/Source/Render/Raster/CMakeLists.txt
+++ b/Source/Render/Raster/CMakeLists.txt
@@ -29,6 +29,8 @@ target_sources(${PROJECT_NAME}
         Modules/Vulkan/VulkanRasterBackend.h
         Modules/Vulkan/VulkanRenderPass.cpp
         Modules/Vulkan/VulkanRenderPass.h
+        Modules/Vulkan/VulkanSubPass.cpp
+        Modules/Vulkan/VulkanSubPass.h
         Modules/Vulkan/VulkanRenderTask.cpp
         Modules/Vulkan/VulkanRenderTask.h
         Modules/Vulkan/VulkanShader.cpp
@@ -41,6 +43,7 @@ target_sources(${PROJECT_NAME}
         CommandList.h
         RenderResource.h
         RenderCommands.h
+        RenderTypes.h
         RasterModule.cpp
         RasterModule.h
         RasterDevice.h
